--- a/package.json
+++ b/package.json
@@ -7,19 +7,34 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "add": "npx shadcn-ui@latest add"
+    "up-db": "npx prisma db push",
+    "open-db": "npx prisma studio"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-nextjs": "^2.3.3",
+    "@prisma/client": "^5.16.1",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@uploadthing/react": "^6.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.12",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
+    "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "react-rnd": "^10.4.11",
+    "sharp": "0.32.6",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.13.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -30,5 +45,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
